VAIL and diffusion will be removed in the next commit as they do not work, starting to consider ASAP pipeline. Will retarget the motion then do IL with PPO.

--- a/walk_agent_IL/data/vicon_data_load.ipynb
+++ b/walk_agent_IL/data/vicon_data_load.ipynb
@@ -40,8 +40,8 @@
     "        columns = [59, 11]\n",
     "        output_buffer = output_df.values[:, columns]\n",
     "\n",
-    "    output_buffer[:, 1] *= -1 # Flip the sign of left hip moment\n",
-    "    output_buffer = lowpass_filter(output_buffer, order=4, cutoff_freq=6, sampling_freq=100)\n",
+    "    # output_buffer[:, 1] *= -1 # Flip the sign of left hip moment\n",
+    "    # output_buffer = lowpass_filter(output_buffer, order=4, cutoff_freq=6, sampling_freq=100)\n",
     "    return output_buffer\n",
     "\n",
     "def lowpass_filter(data, order=4, cutoff_freq=6, sampling_freq=100):\n",
